Change menu to always popup to the left so to avoid the issue with browsers whose scrollbars will appear over the menu layer.  Make the menu 10% transparent just to add a little more polish.

--- a/web/css/win.css
+++ b/web/css/win.css
@@ -306,21 +306,23 @@ filter: alpha(opacity=85);
 
 /* These are the style specifications for the menu layers.
    Set width to get more browsers corporation  */
-div.menu {
+.menu {
   position:absolute;
   visibility:hidden;
   width:24em; left:0; top:0;
   font-size:10px;
-  background-color: #e6e6e6; color:#000;
+  background-color: #E6E6E6; color:#000;
+  filter: alpha(opacity=90);
+  opacity: 0.9;
   border: 2px solid;
   border-color: #f7faff #99a #99a #f7faff;
   z-index:500;
 }
 
 /* Style specifications for menu items and links  */
-div.menu ul, .DropDown ul { margin:0; padding:0 }
+.menu ul, .DropDown ul { margin:0; padding:0 }
 /* Need to set padding of at least one pixel or ie sets very large margin */
-div.menu ul li {
+.menu ul li {
   padding:.3em .4em;
   margin:0;
   list-style-type:none
@@ -332,16 +334,16 @@ div.menu ul li {
 }
 
 /* Set display block and position relative so clicks on list items activate links  */
-div.menu a, div.eventsSummary a {
+.menu a, div.eventsSummary a {
   cursor:default;
   background-color:transparent;
   display:block; position:relative;
   text-decoration:none
   }
 
-div.menu a:link { color:#33b }
-div.menu a:visited { color:#339 }
-div.menu a:hover { color:#fff; background-color:#338 }
+.menu a:link { color:#33b }
+.menu a:visited { color:#339 }
+.menu a:hover { color:#fff; background-color:#338 }
 
 /* These are the styles for the link popups */
 a.ListCellPopup1 {
